some findbugs stuff